--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon --legacy-watch server.js"
   },
   "name": "backend-pos",
   "version": "1.0.0",
