--- a/.env
+++ b/.env
@@ -4,13 +4,14 @@ NODE_ENV=development
 HOST=0.0.0.0
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/pos
+MONGODB_URI=mongodb://mongo:27017/BackendPoS
 MONGO_DEBUG=false
 
 # Redis
-REDIS_HOST=localhost
+REDIS_HOST=redis 
+REDIS_URL=redis://redis:6379
 REDIS_PORT=6379
-REDIS_PASSWORD=11111
+#REDIS_PASSWORD=11111
 REDIS_TTL=3600
 
 # JWT
