--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-#E:\learn-code\backend-pos\docker-compose.yml
-
-
 version: '3.8'
 
 services:
@@ -17,6 +14,21 @@ services:
       timeout: 30s
       retries: 3
 
+  mongo:
+    image: mongo:6
+    container_name: mongo-container
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo_data:/data/db
+    environment:
+      MONGO_INITDB_DATABASE: BackendPoS
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 5s
+      timeout: 30s
+      retries: 3
+
   node_app:
     build: .
     container_name: backend-pos-container
@@ -25,13 +37,19 @@ services:
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis://redis:6379
+      - MONGODB_URI=mongodb://mongo:27017/BackendPoS
+    env_file:
+      - .env    
     depends_on:
       redis:
         condition: service_healthy
+      mongo:
+        condition: service_healthy
     volumes:
       - ./:/app
-      - /app/node_modules
-    restart: unless-stopped
+      - node_modules:/app/node_modules
 
 volumes:
   redis_data:
+  mongo_data:
+  node_modules:
