update create session with redis for save to mmr

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 HOST=0.0.0.0
 
 # Database
-MONGODB_URI=mongodb://mongo:27017/BackendPoS
+MONGODB_URI=mongodb://root:example@mongo:27017/BackendPoS?authSource=admin
 MONGO_DEBUG=false
 
 # Redis
@@ -16,9 +16,10 @@ REDIS_TTL=3600
 
 # JWT
 JWT_SECRET=your_secure_jwt_secret_here
-JWT_EXPIRE=24h
+
 REFRESH_TOKEN_SECRET=your_secure_refresh_token_secret_here
 REFRESH_TOKEN_EXPIRE=7d
+JWT_EXPIRE=24h
 
 # Security
 CORS_ORIGIN=http://localhost:3000
