update dashboard and auth to support sassion instead jwt

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 HOST=0.0.0.0
 
 # Database
-MONGODB_URI=mongodb://root:example@mongo:27017/BackendPoS?authSource=admin
+MONGODB_URI=mongodb://host.docker.internal:27017/BackendPoS
 MONGO_DEBUG=false
 
 # Redis
