--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       redis:
         condition: service_healthy
     volumes:
-      - .my-backend:/app
+      - ./:/app
       - /app/node_modules
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
@@ -51,4 +51,3 @@ services:
 
 volumes:
   redis_data:
-  my-backend:
