--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 HOST=0.0.0.0
 
 # Database
-MONGODB_URI=mongodb://host.docker.internal:27017/BackendPoS
+MONGODB_URI=mongodb://root:example@mongodb:27017/BackendPoS?replicaSet=rs0&authSource=admin
 MONGO_DEBUG=false
 
 # Redis
